# RazerCtrl

./: LICENSE  README.md  build_appimage.sh  install.sh  metadata.json  package-lock.json  package.json  pyproject.toml  razerctrl.desktop  requirements.txt  server.ts
.github/workflows/: lint.yml  opencode.yml
backend/: run.py
backend/src/: inputremapper_service.py  main.py  openrazer_stub.py  requirements.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  api.ts
installers/: install-arch.sh  install-debian.sh  install-fedora.sh
razerctrl/: README.md  app.py  install.sh  main.py  pyproject.toml  remote_node.py
razerctrl/assets/: razerctrl.desktop
razerctrl/backend/: __init__.py  macro_recorder.py  main.py  openrazer_service.py  profile_store.py  requirements.txt
razerctrl/core/: config.py  device_manager.py  hardware_info.py  input_manager.py  macro_manager.py  profile_manager.py
razerctrl/frontend/: index.html  package.json  vite.config.js
razerctrl/frontend/src/: App.jsx  api.js
razerctrl/frontend/src/components/: DeviceSidebar.jsx  LightingPanel.jsx  MacroEditor.jsx  PerformancePanel.jsx  ProfileManager.jsx  RemapPanel.jsx
razerctrl/frontend/src/styles/: App.module.css  DeviceSidebar.module.css  LightingPanel.module.css  MacroEditor.module.css  PerformancePanel.module.css  ProfileManager.module.css  RemapPanel.module.css  index.css
razerctrl/ui/: dashboard.py  dependency_check.py  device_assets.py  device_page.py  device_workspace.py  input_mapper.py  main_window.py  profiles.py  settings.py
razerctrl/utils/: assets.py  color_utils.py  distro_detect.py
scripts/: generate_device_assets.py  setup_fake_openrazer.sh
scripts/ci/: check-formatting.sh  check-pylint.sh  test-hex-casing.sh  test-vermin.sh
src/: App.tsx  api.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  openrazer.rs
src/components/: ConfigPanel.tsx  DPIEditor.tsx  DeviceSidebar.tsx  DeviceViewport.tsx  EffectSelector.tsx  HotspotOverlay.tsx  RemapSelector.tsx  types.ts
src/data/: devices.json  functions.json  supported_devices.ts
tests/: conftest.py
tests/integration/: test_api_endpoints.py
(+28 files in other folders)
