[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "razerctrl"
version = "0.1.0"
authors = [
    { name = "Albert M", email = "albertmkarakate@gmail.com" }
]
description = "Premium Razer device control suite with React frontend and FastAPI backend"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "evdev",
    "distro",
    "PyQt6",
    "websockets",
    "flask"
]

[project.scripts]
razerctrl = "razerctrl.main:main"
razerctrl-api = "uvicorn razerctrl.backend.main:app --host 0.0.0.0 --port 8000"
razerctrl-remote = "python razerctrl/remote_node.py"

[tool.setuptools]
packages = ["razerctrl", "razerctrl.backend", "razerctrl.core", "razerctrl.ui", "razerctrl.utils"]
package-dir = {"razerctrl": "."}
